# ecse683

./: .gitignore  readme.md
a1/: control_gazebo.py  control_test.py  direct_collocation.py  ilqr.py  requirements.txt  visualizer.py
project/src/: README.md  objects.json
project/src/bev/: CMakeLists.txt  package.xml  requirements.txt
project/src/bev/scripts/: ipm_node.py  ipm_rs.py
project/src/control/: CMakeLists.txt  package.xml
project/src/control/config/: carla_viz.rviz
project/src/control/launch/: control.launch
project/src/control/scripts/: carla_bridge.py  control_carla.py  global_planner.py  mobile_robot_acados_ocp.json  mpc2.py  mpc_acados.py  path_manager.py
project/src/control/scripts/c_generated_code/: Makefile  acados_sim_solver_mobile_robot.c  acados_sim_solver_mobile_robot.h  acados_solver_mobile_robot.c  acados_solver_mobile_robot.h  main_sim_mobile_robot.c
project/src/control/scripts/c_generated_code/mobile_robot_cost/: mobile_robot_cost.h  mobile_robot_cost_y_0_fun.c  mobile_robot_cost_y_0_fun_jac_ut_xt.c  mobile_robot_cost_y_0_hess.c  mobile_robot_cost_y_e_fun.c  mobile_robot_cost_y_e_fun_jac_ut_xt.c  mobile_robot_cost_y_e_hess.c  mobile_robot_cost_y_fun.c  mobile_robot_cost_y_fun_jac_ut_xt.c  mobile_robot_cost_y_hess.c
project/src/control/scripts/c_generated_code/mobile_robot_model/: mobile_robot_expl_ode_fun.c  mobile_robot_expl_vde_adj.c  mobile_robot_expl_vde_forw.c
project/src/control/scripts/config/: ilqr.yaml  mpc_config.yaml
project/src/mapping/: CMakeLists.txt  package.xml
project/src/mapping/config/: grid_map_viz.yaml
project/src/mapping/include/mapping/: Constants.h  ImageToCost.hpp  TerrainMap.hpp
project/src/mapping/launch/: grid_map_viz.launch  image_to_gridmap_demo.launch
project/src/mapping/rviz/: terrain_map.rviz
project/src/mapping/scripts/: image_publisher.py
project/src/mapping/src/: ImageToCost_node.cpp  TerrainMap.cpp  TerrainMapOld.cpp  main.cpp
project/src/planning/: CMakeLists.txt  package.xml
project/src/planning/include/: Utility.h
project/src/planning/scripts/: grid_map_visualizer.py
project/src/planning/src/: Planner.cpp  controller_node.cpp  (+1 more)
project/src/segmentation/: CMakeLists.txt  package.xml
(+6 files in other folders)
